examples/test/testpolicy5715.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5715
  namespace: namespace274
spec:
  podSelector:
    matchLabels:
      key10: value5
      key47: value15
      key13: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value36
          key16: value20
      podSelector:
        matchLabels:
          key22: value42
          key34: value35
